[gd_scene load_steps=13 format=3 uid="uid://0hh7g7ukk0k8"]

[ext_resource type="Script" path="res://Scene/Entities/Slime/slime.gd" id="1_phfju"]
[ext_resource type="Texture2D" uid="uid://b1b4s25ko2566" path="res://Sprites/DungeonEntities.png" id="1_sil0u"]
[ext_resource type="PackedScene" uid="uid://utrb6m7iolot" path="res://Scene/Components/EntityInformation/entity_information.tscn" id="2_7u77i"]
[ext_resource type="PackedScene" uid="uid://b8nolpe8tjujg" path="res://Scene/Components/GridBasedMovement/grid_based_movement.tscn" id="3_daonm"]
[ext_resource type="PackedScene" uid="uid://0ct7qo0h215b" path="res://Scene/Components/TurnBasedEntity/turn_based_entity.tscn" id="4_40u4v"]
[ext_resource type="PackedScene" uid="uid://b6pdska54fyc5" path="res://Scene/Components/Interactable/interactable.tscn" id="6_58tid"]
[ext_resource type="PackedScene" uid="uid://bfyu6db0t413n" path="res://Scene/Components/Interactable/InteractableBehaviour/DamageableInteraction/damageable_interaction.tscn" id="7_1fb5e"]
[ext_resource type="PackedScene" uid="uid://cqddavgwxy6te" path="res://Scene/Components/Health/health.tscn" id="8_1ttyu"]
[ext_resource type="PackedScene" uid="uid://b55ri6rnlx7st" path="res://Scene/Components/Mortality/mortality.tscn" id="9_cqnjf"]
[ext_resource type="PackedScene" uid="uid://qsijus5u6tt3" path="res://Scene/Components/CombatInformation/combat_information.tscn" id="10_kfuwu"]
[ext_resource type="Resource" uid="uid://c2o1xub72mmgb" path="res://Scene/Scripts/Resources/Weapons/slime_body.tres" id="11_tdci3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccitp"]
size = Vector2(12, 10)

[node name="Slime" type="Area2D"]
script = ExtResource("1_phfju")

[node name="Raycasts" type="Node2D" parent="."]

[node name="NorthCast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -16)
collide_with_areas = true

[node name="EastCast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(16, 0)
collide_with_areas = true

[node name="WestCast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-16, 0)
collide_with_areas = true

[node name="SouthCast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 16)
collide_with_areas = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_sil0u")
region_enabled = true
region_rect = Rect2(32, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ccitp")

[node name="EntityInformation" parent="." instance=ExtResource("2_7u77i")]

[node name="GridBasedMovement" parent="." node_paths=PackedStringArray("north_raycast", "east_raycast", "west_raycast", "south_raycast", "sprite_2d") instance=ExtResource("3_daonm")]
north_raycast = NodePath("../Raycasts/NorthCast")
east_raycast = NodePath("../Raycasts/EastCast")
west_raycast = NodePath("../Raycasts/WestCast")
south_raycast = NodePath("../Raycasts/SouthCast")
sprite_2d = NodePath("../Sprite2D")

[node name="TurnBasedEntity" parent="." instance=ExtResource("4_40u4v")]

[node name="Interactable" parent="." instance=ExtResource("6_58tid")]

[node name="DamageableInteraction" parent="Interactable" node_paths=PackedStringArray("health", "combat_information") instance=ExtResource("7_1fb5e")]
health = NodePath("../../Health")
combat_information = NodePath("../../CombatInformation")

[node name="Health" parent="." node_paths=PackedStringArray("entity_information") instance=ExtResource("8_1ttyu")]
position = Vector2(0, -4)
entity_information = NodePath("../EntityInformation")

[node name="Mortality" parent="." node_paths=PackedStringArray("health", "entity_info") instance=ExtResource("9_cqnjf")]
health = NodePath("../Health")
entity_info = NodePath("../EntityInformation")

[node name="CombatInformation" parent="." instance=ExtResource("10_kfuwu")]
weapon = ExtResource("11_tdci3")

[connection signal="stopped_moving" from="GridBasedMovement" to="." method="_on_grid_based_movement_stopped_moving"]
[connection signal="health_reached_zero" from="Health" to="Mortality" method="_on_health_health_reached_zero"]
